--- a/.travis.yml
+++ b/.travis.yml
@@ -17,9 +17,9 @@ matrix:
     - os: osx
       compiler: gcc
 
-# when building, treat all warnings as errors
+# when building, treat all warnings as errors. also: include gcov support
 env:
-  - EXTRA_CFLAGS=-Werror
+  - EXTRA_CFLAGS="-Werror --coverage" LDFLAGS=--coverage
 
 # take care of the libusb dependency for Linux
 addons:
@@ -27,16 +27,28 @@ addons:
     packages:
     - libusb-1.0-0-dev
 
-# take care of the libusb dependency for Mac OS X
+# take care of the libusb dependency for Mac OS X, get cpp-coveralls for linux
 before_install:
   - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then
       brew update;
       brew install libusb;
     fi
+  - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then
+      pip install --user cpp-coveralls;
+    fi
 
 # build via Makefile, with a single overall status
 script:
   - make && make misc && make check
+
+# for Linux, upload coverage report
+# Note: the gcc/gcov version on Travis has issues with "<built-in>",
+# see https://gcc.gnu.org/bugzilla/show_bug.cgi?id=46266
+# For now, it seems that only clang is usable!
+after_script:
+  - if [[ "$TRAVIS_OS_NAME" == "linux" && "$CC" == "clang" ]]; then
+      coveralls -i fexc.c -i script.c -i script_bin.c -i script_fex.c ;
+    fi
 
 # turn off email notifications
 notifications:
