Revert "[Experimental] Do a test run on Armbian .fex files instead of sunxi-boards"
This reverts commit f0fe84ac1381881ff6585d9095f38f6dd33d2855.

--- a/tests/Makefile
+++ b/tests/Makefile
@@ -2,10 +2,8 @@
 # tests/Makefile
 #
 
-#BOARDS_URL := https://github.com/linux-sunxi/sunxi-boards/archive/master.zip
-#BOARDS_DIR := sunxi-boards
-BOARDS_URL := https://github.com/igorpecovnik/lib/archive/master.zip
-BOARDS_DIR := armbian
+BOARDS_URL := https://github.com/linux-sunxi/sunxi-boards/archive/master.zip
+BOARDS_DIR := sunxi-boards
 
 checks: check_all_fex coverage
 
@@ -26,9 +24,9 @@ $(BOARDS_DIR).zip:
 $(BOARDS_DIR)/README: $(BOARDS_DIR).zip
 	@echo Extracting $< ...
 	unzip -q $<
-	mv lib-master $(BOARDS_DIR)
+	mv sunxi-boards-master $(BOARDS_DIR)
 	touch -r $(BOARDS_DIR) $<
-	#cat patches/*.patch | patch -p1
+	cat patches/*.patch | patch -p1
 
 unify-fex: unify-fex.c
 	$(CC) -Wall -Werror -o $@ $<
